--- a/.github/workflows/notify.yml
+++ b/.github/workflows/notify.yml
@@ -24,12 +24,9 @@ jobs:
       run: |
         $ProgressPreference = "SilentlyContinue"
       
-        $url = "https://api.elmah.io/v3/deployments?api_key=4a3a5f40013b442d9c1aa5e0a0c98bbf"
+        $url = "https://api.elmah.io/v3/deployments?api_key=${{ secrets.SuperSecret }}"
         $body = @{
-          version = "$env:BUILD_BUILDNUMBER"
-          description = "$env:BUILD_SOURCEVERSIONMESSAGE"
-          userName = "$env:BUILD_REQUESTEDFOR"
-          userEmail = "$env:BUILD_REQUESTEDFOREMAIL"
+          version = "1.0.0"
           logId = "e512adf5-07af-4162-82a1-b5811513feaf"
         }
         [Net.ServicePointManager]::SecurityProtocol = `
