--- a/.github/workflows/notify.yml
+++ b/.github/workflows/notify.yml
@@ -23,10 +23,12 @@ jobs:
       shell: powershell
       run: |
         $ProgressPreference = "SilentlyContinue"
+        
+        Write-Host "${{ env.GITHUB_RUN_ID }}"
       
-        $url = "https://api.elmah.io/v3/deployments?api_key=${{ secrets.SuperSecret }}"
+        $url = "https://api.elmah.io/v3/deployments?api_key=4a3a5f40013b442d9c1aa5e0a0c98bbf"
         $body = @{
-          version = "1.0.0"
+          version = "${{ env.GITHUB_RUN_ID }}"
           logId = "e512adf5-07af-4162-82a1-b5811513feaf"
         }
         [Net.ServicePointManager]::SecurityProtocol = `
