--- a/.github/workflows/notify.yml
+++ b/.github/workflows/notify.yml
@@ -20,18 +20,15 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     - name: Notify elmah.io
-      env:
-        API_KEY: ${{ secrets.ELMAH_IO_API_KEY }}
       shell: powershell
       run: |
         $ProgressPreference = "SilentlyContinue"
         
         Write-Host Hello
-        Write-Host ${{ env.API_KEY }}
       
-        $url = "https://api.elmah.io/v3/deployments?api_key=${{ env.API_KEY }}"
+        $url = "https://api.elmah.io/v3/deployments?api_key=${{ secrets.ELMAH_IO_API_KEY }}"
         $body = @{
-          version = "2.0.1"
+          version = "2.0.2"
           logId = "e512adf5-07af-4162-82a1-b5811513feaf"
         }
         [Net.ServicePointManager]::SecurityProtocol = `
