--- a/.github/workflows/notify.yml
+++ b/.github/workflows/notify.yml
@@ -24,7 +24,8 @@ jobs:
       run: |
         $ProgressPreference = "SilentlyContinue"
         
-        Write-Host Hello ${{ github.run_number }}
+        Write-Host github.run_number ${{ github.run_number }}
+        Write-Host github.actor ${{ github.actor }}
       
         $url = "https://api.elmah.io/v3/deployments?api_key=${{ secrets.ELMAH_IO_API_KEY }}"
         $body = @{
