--- a/.github/workflows/notify.yml
+++ b/.github/workflows/notify.yml
@@ -27,7 +27,7 @@ jobs:
         $url = "https://api.elmah.io/v3/deployments?api_key=${{ secrets.ELMAH_IO_API_KEY }}"
         $body = @{
           version = ${{ github.run_number }}
-          userName = ${{ github.actor }}
+          userName = "${{ github.actor }}"
           logId = "e512adf5-07af-4162-82a1-b5811513feaf"
         }
         [Net.ServicePointManager]::SecurityProtocol = `
